Desing: foram feitas mudanças no desing para que ficasse com a aparencia minimalista, além disso foram adicionadas ações responivas para que o site pudesse ser acessado normalmente por dispositivos móveis

--- a/jogo.html
+++ b/jogo.html
@@ -16,13 +16,13 @@
 
                 <section class="sub-secao">
                     <div id="palavras"></div>
-                            <div class="botoes">
-                            <button onclick="play()" id="botao">Play</button>
-                            <button onclick="next()" id="botao">Next</button>
-                            </div>
+                    <div class="botoes">
+                        <button onclick="play()" id="botao">Início</button>
+                        <button onclick="next()" id="botao">Próxima lista de palavras</button>
+                    </div>
                 </section>
-                
-               
+
+
 
             </div>
         </section>
